# pliq-back

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
.cargo/: config.toml
proto/: ai_service.proto  common.proto  fraud_detection.proto  matching.proto
src/: config.rs  config_tests.rs  main.rs
src/api/: errors.rs  errors_tests.rs  mod.rs  response.rs  response_tests.rs  routes.rs
src/api/extractors/: auth.rs  pagination.rs
src/api/handlers/: applications.rs  auth.rs  escrow.rs  health.rs  leases.rs  listings.rs  mod.rs  payments.rs  reputation.rs  users.rs  webrtc.rs
src/api/middleware/: auth.rs  auth_tests.rs  cors.rs  mod.rs  rate_limit.rs  request_id.rs  tracing_mw.rs
src/application/: mod.rs
src/application/services/: mod.rs
src/chain/: events.rs  indexer.rs  indexer_tests.rs  mod.rs
src/crypto/: commitments.rs  commitments_tests.rs  hybrid.rs  hybrid_tests.rs  merkle.rs  merkle_tests.rs  mod.rs
src/domain/: application.rs  errors.rs  escrow.rs  lease.rs  listing.rs  mod.rs  payment.rs  reputation.rs  user.rs
src/grpc/: clients.rs  mod.rs  server.rs
src/infrastructure/: ai_client.rs  blockchain_client.rs  mod.rs
src/services/: applications.rs  escrow.rs  identity.rs  leases.rs  listings.rs  mod.rs  payments.rs  privacy.rs  reputation.rs
src/websocket/: connection.rs  events.rs  handlers.rs  manager.rs  messages.rs  messages_tests.rs  mod.rs
