[package]
name = "pliq-back"
version = "0.1.0"
edition = "2024"

[dependencies]
pliq-back-db = { path = "../pliq-back-db" }

tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "request-id"] }
tonic = "0.13"
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
dotenvy = "0.15"
thiserror = "2"
anyhow = "1"
sha3 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
aes-gcm = "0.10"
hkdf = "0.12"
rand = "0.9"
jsonwebtoken = "9"
dashmap = "6"
tokio-tungstenite = "0.26"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
hex = "0.4"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }

[build-dependencies]
tonic-build = "0.13"
prost-build = "0.13"

[dev-dependencies]
tokio-test = "0.4"
